# boba-engine

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md
crates/boba-3d/: Cargo.toml
crates/boba-3d/src/: lib.rs  transform.rs
crates/boba-core/: Cargo.toml
crates/boba-core/proc/: Cargo.toml
crates/boba-core/proc/src/: lib.rs
crates/boba-core/src/: arena.rs  event.rs  lib.rs  pearl.rs  resources.rs  signal.rs  unique.rs  world.rs
crates/boba-core/src/arena/: arena.rs  map.rs  mod.rs
crates/boba-core/src/pearl/: collections.rs  map.rs
crates/boba-ecs/: Cargo.toml
crates/boba-ecs/macros/: Cargo.toml
crates/boba-ecs/src/: component.rs  lib.rs  query.rs
crates/boba-proc/: Cargo.toml
crates/boba-proc/src/: lib.rs
crates/boba-signal/: Cargo.toml
crates/boba-signal/src/: lib.rs  signal.rs
crates/handle-map/: Cargo.toml
crates/handle-map/src/: handle.rs  lib.rs
crates/milk-tea/: Cargo.toml
crates/milk-tea/src/: lib.rs  run.rs  runner.rs  window.rs
crates/node-tree/: Cargo.toml
crates/node-tree/src/: lib.rs  tree.rs  walker.rs
crates/taro-renderer/: Cargo.toml
crates/taro-renderer/src/: camera.rs  hardware.rs  lib.rs  renderer.rs
crates/taro-renderer/src/data/: color.rs
crates/taro-renderer/src/events/: mod.rs  render.rs
crates/taro-renderer/src/passes/: black.rs  color.rs  mod.rs
crates/taro-renderer/src/pearls/: camera.rs  mod.rs  sentinel.rs  skybox.rs  window.rs
examples/: event.rs  fps.rs  multiwindow.rs  nested_event.rs  rebirth.rs  signal.rs  skybox.rs  spawn_bomb.rs  transform.rs  window.rs
src/: lib.rs
(+25 files in other folders)
