[package]
name = "boba-engine"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
env_logger = "0.10"
milk-tea = { path = "./crates/milk-tea" }
boba-core = { path = "./crates/boba-core" }
taro-renderer = { path = "./crates/taro-renderer" }

[profile.release]
debug = true
