[package]
name = "boba-engine"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
env_logger = "0.11"
boba-3d = { path = "./crates/boba-3d" }
milk-tea = { path = "./crates/milk-tea" }
boba-core = { path = "./crates/boba-core" }
boba-signal = { path = "./crates/boba-signal" }
taro-renderer = { path = "./crates/taro-renderer" }
